compiler/cp/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID SEMICOLON
Rule 7     var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 8     var_declaration -> type_specifier ID COMMA ID SEMICOLON
Rule 9     type_specifier -> E
Rule 10    type_specifier -> S
Rule 11    type_specifier -> F
Rule 12    fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 13    params -> param_list
Rule 14    param_list -> param_list COMMA param
Rule 15    param_list -> param
Rule 16    param_list -> empty
Rule 17    param -> type_specifier ID
Rule 18    param -> type_specifier ID LBRACKET RBRACKET
Rule 19    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 20    local_declarations -> local_declarations var_declaration
Rule 21    local_declarations -> empty
Rule 22    statement_list -> statement_list statement
Rule 23    statement_list -> empty
Rule 24    selection_stmt -> SI LPAREN expression RPAREN statement
Rule 25    selection_stmt -> SI LPAREN expression RPAREN statement SINO statement
Rule 26    iteration_stmt -> MQ LPAREN expression RPAREN statement
Rule 27    iteration_stmt -> H statement MQ LPAREN expression RPAREN
Rule 28    iteration_stmt -> for LPAREN ID EQUAL NUMBER SEMICOLON ID relop NUMBER SEMICOLON ID addop addop RPAREN statement
Rule 29    statement -> expression_stmt
Rule 30    statement -> compount_stmt
Rule 31    statement -> selection_stmt
Rule 32    statement -> iteration_stmt
Rule 33    expression_stmt -> expression SEMICOLON
Rule 34    expression_stmt -> SEMICOLON
Rule 35    expression -> var EQUAL expression
Rule 36    expression -> simple_expression
Rule 37    var -> ID
Rule 38    var -> ID LBRACKET expression RBRACKET
Rule 39    simple_expression -> additive_expression relop additive_expression
Rule 40    simple_expression -> additive_expression
Rule 41    relop -> LESS
Rule 42    relop -> LESSEQUAL
Rule 43    relop -> GREATER
Rule 44    relop -> GREATEREQUAL
Rule 45    relop -> DEQUAL
Rule 46    relop -> DISTINT
Rule 47    relop -> AND
Rule 48    relop -> OR
Rule 49    additive_expression -> additive_expression addop term
Rule 50    additive_expression -> term
Rule 51    addop -> PLUS
Rule 52    addop -> MINUS
Rule 53    term -> term mulop factor
Rule 54    term -> factor
Rule 55    mulop -> TIMES
Rule 56    mulop -> DIVIDE
Rule 57    mulop -> POW
Rule 58    mulop -> MODULO
Rule 59    factor -> LPAREN expression RPAREN
Rule 60    factor -> var
Rule 61    factor -> call
Rule 62    factor -> NUMBER
Rule 63    call -> ID LPAREN args RPAREN
Rule 64    args -> args_list
Rule 65    args -> empty
Rule 66    args_list -> args_list COMMA expression
Rule 67    args_list -> expression
Rule 68    empty -> <empty>

Terminals, with rules where they appear

AND                  : 47
COMMA                : 8 14 66
DEQUAL               : 45
DISTINT              : 46
DIVIDE               : 56
E                    : 9
EQUAL                : 28 35
F                    : 11
GREATER              : 43
GREATEREQUAL         : 44
H                    : 27
ID                   : 6 7 8 8 12 17 18 28 28 28 37 38 63
LBLOCK               : 19
LBRACKET             : 7 18 38
LESS                 : 41
LESSEQUAL            : 42
LPAREN               : 12 24 25 26 27 28 59 63
MINUS                : 52
MODULO               : 58
MQ                   : 26 27
NUMBER               : 7 28 28 62
OR                   : 48
PLUS                 : 51
POW                  : 57
RBLOCK               : 19
RBRACKET             : 7 18 38
RPAREN               : 12 24 25 26 27 28 59 63
S                    : 10
SEMICOLON            : 6 7 8 28 28 33 34
SI                   : 24 25
SINO                 : 25
TIMES                : 55
error                : 
for                  : 28

Nonterminals, with rules where they appear

additive_expression  : 39 39 40 49
addop                : 28 28 49
args                 : 63
args_list            : 64 66
call                 : 61
compount_stmt        : 12 30
declaration          : 2 3
declaration_list     : 1 2
empty                : 16 21 23 65
expression           : 24 25 26 27 33 35 38 59 66 67
expression_stmt      : 29
factor               : 53 54
fun_declaration      : 5
iteration_stmt       : 32
local_declarations   : 19 20
mulop                : 53
param                : 14 15
param_list           : 13 14
params               : 12
program              : 0
relop                : 28 39
selection_stmt       : 31
simple_expression    : 36
statement            : 22 24 25 25 26 27 28
statement_list       : 19 22
term                 : 49 50 53
type_specifier       : 6 7 8 12 17 18
var                  : 35 60
var_declaration      : 4 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (12) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (9) type_specifier -> . E
    (10) type_specifier -> . S
    (11) type_specifier -> . F

    E               shift and go to state 7
    S               shift and go to state 8
    F               shift and go to state 9

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (12) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (9) type_specifier -> . E
    (10) type_specifier -> . S
    (11) type_specifier -> . F

    $end            reduce using rule 1 (program -> declaration_list .)
    E               shift and go to state 7
    S               shift and go to state 8
    F               shift and go to state 9

    declaration                    shift and go to state 10
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    E               reduce using rule 3 (declaration_list -> declaration .)
    S               reduce using rule 3 (declaration_list -> declaration .)
    F               reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    E               reduce using rule 4 (declaration -> var_declaration .)
    S               reduce using rule 4 (declaration -> var_declaration .)
    F               reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    E               reduce using rule 5 (declaration -> fun_declaration .)
    S               reduce using rule 5 (declaration -> fun_declaration .)
    F               reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (7) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> type_specifier . ID COMMA ID SEMICOLON
    (12) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt

    ID              shift and go to state 11


state 7

    (9) type_specifier -> E .

    ID              reduce using rule 9 (type_specifier -> E .)


state 8

    (10) type_specifier -> S .

    ID              reduce using rule 10 (type_specifier -> S .)


state 9

    (11) type_specifier -> F .

    ID              reduce using rule 11 (type_specifier -> F .)


state 10

    (2) declaration_list -> declaration_list declaration .

    E               reduce using rule 2 (declaration_list -> declaration_list declaration .)
    S               reduce using rule 2 (declaration_list -> declaration_list declaration .)
    F               reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 11

    (6) var_declaration -> type_specifier ID . SEMICOLON
    (7) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> type_specifier ID . COMMA ID SEMICOLON
    (12) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt

    SEMICOLON       shift and go to state 12
    LBRACKET        shift and go to state 13
    COMMA           shift and go to state 14
    LPAREN          shift and go to state 15


state 12

    (6) var_declaration -> type_specifier ID SEMICOLON .

    E               reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    S               reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    F               reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RBLOCK          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LBLOCK          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    SI              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    MQ              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    H               reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    for             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)


state 13

    (7) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 16


state 14

    (8) var_declaration -> type_specifier ID COMMA . ID SEMICOLON

    ID              shift and go to state 17


state 15

    (12) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (13) params -> . param_list
    (14) param_list -> . param_list COMMA param
    (15) param_list -> . param
    (16) param_list -> . empty
    (17) param -> . type_specifier ID
    (18) param -> . type_specifier ID LBRACKET RBRACKET
    (68) empty -> .
    (9) type_specifier -> . E
    (10) type_specifier -> . S
    (11) type_specifier -> . F

    COMMA           reduce using rule 68 (empty -> .)
    RPAREN          reduce using rule 68 (empty -> .)
    E               shift and go to state 7
    S               shift and go to state 8
    F               shift and go to state 9

    type_specifier                 shift and go to state 18
    params                         shift and go to state 19
    param_list                     shift and go to state 20
    param                          shift and go to state 21
    empty                          shift and go to state 22

state 16

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 23


state 17

    (8) var_declaration -> type_specifier ID COMMA ID . SEMICOLON

    SEMICOLON       shift and go to state 24


state 18

    (17) param -> type_specifier . ID
    (18) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 25


state 19

    (12) fun_declaration -> type_specifier ID LPAREN params . RPAREN compount_stmt

    RPAREN          shift and go to state 26


state 20

    (13) params -> param_list .
    (14) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 13 (params -> param_list .)
    COMMA           shift and go to state 27


state 21

    (15) param_list -> param .

    COMMA           reduce using rule 15 (param_list -> param .)
    RPAREN          reduce using rule 15 (param_list -> param .)


state 22

    (16) param_list -> empty .

    COMMA           reduce using rule 16 (param_list -> empty .)
    RPAREN          reduce using rule 16 (param_list -> empty .)


state 23

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 28


state 24

    (8) var_declaration -> type_specifier ID COMMA ID SEMICOLON .

    E               reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    S               reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    F               reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    $end            reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    RBLOCK          reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    SEMICOLON       reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    LBLOCK          reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    SI              reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    MQ              reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    H               reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    for             reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    ID              reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    LPAREN          reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    NUMBER          reduce using rule 8 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)


state 25

    (17) param -> type_specifier ID .
    (18) param -> type_specifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 17 (param -> type_specifier ID .)
    RPAREN          reduce using rule 17 (param -> type_specifier ID .)
    LBRACKET        shift and go to state 29


state 26

    (12) fun_declaration -> type_specifier ID LPAREN params RPAREN . compount_stmt
    (19) compount_stmt -> . LBLOCK local_declarations statement_list RBLOCK

    LBLOCK          shift and go to state 31

    compount_stmt                  shift and go to state 30

state 27

    (14) param_list -> param_list COMMA . param
    (17) param -> . type_specifier ID
    (18) param -> . type_specifier ID LBRACKET RBRACKET
    (9) type_specifier -> . E
    (10) type_specifier -> . S
    (11) type_specifier -> . F

    E               shift and go to state 7
    S               shift and go to state 8
    F               shift and go to state 9

    param                          shift and go to state 32
    type_specifier                 shift and go to state 18

state 28

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .

    E               reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    S               reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    F               reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    RBLOCK          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LBLOCK          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    SI              reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    MQ              reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    H               reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    for             reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    ID              reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LPAREN          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    NUMBER          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)


state 29

    (18) param -> type_specifier ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 33


state 30

    (12) fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt .

    E               reduce using rule 12 (fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt .)
    S               reduce using rule 12 (fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt .)
    F               reduce using rule 12 (fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt .)
    $end            reduce using rule 12 (fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt .)


state 31

    (19) compount_stmt -> LBLOCK . local_declarations statement_list RBLOCK
    (20) local_declarations -> . local_declarations var_declaration
    (21) local_declarations -> . empty
    (68) empty -> .

    E               reduce using rule 68 (empty -> .)
    S               reduce using rule 68 (empty -> .)
    F               reduce using rule 68 (empty -> .)
    RBLOCK          reduce using rule 68 (empty -> .)
    SEMICOLON       reduce using rule 68 (empty -> .)
    LBLOCK          reduce using rule 68 (empty -> .)
    SI              reduce using rule 68 (empty -> .)
    MQ              reduce using rule 68 (empty -> .)
    H               reduce using rule 68 (empty -> .)
    for             reduce using rule 68 (empty -> .)
    ID              reduce using rule 68 (empty -> .)
    LPAREN          reduce using rule 68 (empty -> .)
    NUMBER          reduce using rule 68 (empty -> .)

    local_declarations             shift and go to state 34
    empty                          shift and go to state 35

state 32

    (14) param_list -> param_list COMMA param .

    COMMA           reduce using rule 14 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 14 (param_list -> param_list COMMA param .)


state 33

    (18) param -> type_specifier ID LBRACKET RBRACKET .

    COMMA           reduce using rule 18 (param -> type_specifier ID LBRACKET RBRACKET .)
    RPAREN          reduce using rule 18 (param -> type_specifier ID LBRACKET RBRACKET .)


state 34

    (19) compount_stmt -> LBLOCK local_declarations . statement_list RBLOCK
    (20) local_declarations -> local_declarations . var_declaration
    (22) statement_list -> . statement_list statement
    (23) statement_list -> . empty
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (68) empty -> .
    (9) type_specifier -> . E
    (10) type_specifier -> . S
    (11) type_specifier -> . F

    RBLOCK          reduce using rule 68 (empty -> .)
    SEMICOLON       reduce using rule 68 (empty -> .)
    LBLOCK          reduce using rule 68 (empty -> .)
    SI              reduce using rule 68 (empty -> .)
    MQ              reduce using rule 68 (empty -> .)
    H               reduce using rule 68 (empty -> .)
    for             reduce using rule 68 (empty -> .)
    ID              reduce using rule 68 (empty -> .)
    LPAREN          reduce using rule 68 (empty -> .)
    NUMBER          reduce using rule 68 (empty -> .)
    E               shift and go to state 7
    S               shift and go to state 8
    F               shift and go to state 9

    statement_list                 shift and go to state 36
    var_declaration                shift and go to state 37
    empty                          shift and go to state 38
    type_specifier                 shift and go to state 39

state 35

    (21) local_declarations -> empty .

    E               reduce using rule 21 (local_declarations -> empty .)
    S               reduce using rule 21 (local_declarations -> empty .)
    F               reduce using rule 21 (local_declarations -> empty .)
    RBLOCK          reduce using rule 21 (local_declarations -> empty .)
    SEMICOLON       reduce using rule 21 (local_declarations -> empty .)
    LBLOCK          reduce using rule 21 (local_declarations -> empty .)
    SI              reduce using rule 21 (local_declarations -> empty .)
    MQ              reduce using rule 21 (local_declarations -> empty .)
    H               reduce using rule 21 (local_declarations -> empty .)
    for             reduce using rule 21 (local_declarations -> empty .)
    ID              reduce using rule 21 (local_declarations -> empty .)
    LPAREN          reduce using rule 21 (local_declarations -> empty .)
    NUMBER          reduce using rule 21 (local_declarations -> empty .)


state 36

    (19) compount_stmt -> LBLOCK local_declarations statement_list . RBLOCK
    (22) statement_list -> statement_list . statement
    (29) statement -> . expression_stmt
    (30) statement -> . compount_stmt
    (31) statement -> . selection_stmt
    (32) statement -> . iteration_stmt
    (33) expression_stmt -> . expression SEMICOLON
    (34) expression_stmt -> . SEMICOLON
    (19) compount_stmt -> . LBLOCK local_declarations statement_list RBLOCK
    (24) selection_stmt -> . SI LPAREN expression RPAREN statement
    (25) selection_stmt -> . SI LPAREN expression RPAREN statement SINO statement
    (26) iteration_stmt -> . MQ LPAREN expression RPAREN statement
    (27) iteration_stmt -> . H statement MQ LPAREN expression RPAREN
    (28) iteration_stmt -> . for LPAREN ID EQUAL NUMBER SEMICOLON ID relop NUMBER SEMICOLON ID addop addop RPAREN statement
    (35) expression -> . var EQUAL expression
    (36) expression -> . simple_expression
    (37) var -> . ID
    (38) var -> . ID LBRACKET expression RBRACKET
    (39) simple_expression -> . additive_expression relop additive_expression
    (40) simple_expression -> . additive_expression
    (49) additive_expression -> . additive_expression addop term
    (50) additive_expression -> . term
    (53) term -> . term mulop factor
    (54) term -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (60) factor -> . var
    (61) factor -> . call
    (62) factor -> . NUMBER
    (63) call -> . ID LPAREN args RPAREN

    RBLOCK          shift and go to state 40
    SEMICOLON       shift and go to state 47
    LBLOCK          shift and go to state 31
    SI              shift and go to state 48
    MQ              shift and go to state 50
    H               shift and go to state 51
    for             shift and go to state 52
    ID              shift and go to state 53
    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 54

    statement                      shift and go to state 41
    expression_stmt                shift and go to state 42
    compount_stmt                  shift and go to state 43
    selection_stmt                 shift and go to state 44
    iteration_stmt                 shift and go to state 45
    expression                     shift and go to state 46
    var                            shift and go to state 55
    simple_expression              shift and go to state 56
    additive_expression            shift and go to state 57
    term                           shift and go to state 58
    factor                         shift and go to state 59
    call                           shift and go to state 60

state 37

    (20) local_declarations -> local_declarations var_declaration .

    E               reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    S               reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    F               reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    RBLOCK          reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    SEMICOLON       reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    LBLOCK          reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    SI              reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    MQ              reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    H               reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    for             reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    ID              reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    LPAREN          reduce using rule 20 (local_declarations -> local_declarations var_declaration .)
    NUMBER          reduce using rule 20 (local_declarations -> local_declarations var_declaration .)


state 38

    (23) statement_list -> empty .

    RBLOCK          reduce using rule 23 (statement_list -> empty .)
    SEMICOLON       reduce using rule 23 (statement_list -> empty .)
    LBLOCK          reduce using rule 23 (statement_list -> empty .)
    SI              reduce using rule 23 (statement_list -> empty .)
    MQ              reduce using rule 23 (statement_list -> empty .)
    H               reduce using rule 23 (statement_list -> empty .)
    for             reduce using rule 23 (statement_list -> empty .)
    ID              reduce using rule 23 (statement_list -> empty .)
    LPAREN          reduce using rule 23 (statement_list -> empty .)
    NUMBER          reduce using rule 23 (statement_list -> empty .)


state 39

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (7) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) var_declaration -> type_specifier . ID COMMA ID SEMICOLON

    ID              shift and go to state 61


state 40

    (19) compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .

    E               reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    S               reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    F               reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    $end            reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    RBLOCK          reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    SEMICOLON       reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    LBLOCK          reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    SI              reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    MQ              reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    H               reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    for             reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    ID              reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    LPAREN          reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    NUMBER          reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)
    SINO            reduce using rule 19 (compount_stmt -> LBLOCK local_declarations statement_list RBLOCK .)


state 41

    (22) statement_list -> statement_list statement .

    RBLOCK          reduce using rule 22 (statement_list -> statement_list statement .)
    SEMICOLON       reduce using rule 22 (statement_list -> statement_list statement .)
    LBLOCK          reduce using rule 22 (statement_list -> statement_list statement .)
    SI              reduce using rule 22 (statement_list -> statement_list statement .)
    MQ              reduce using rule 22 (statement_list -> statement_list statement .)
    H               reduce using rule 22 (statement_list -> statement_list statement .)
    for             reduce using rule 22 (statement_list -> statement_list statement .)
    ID              reduce using rule 22 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 22 (statement_list -> statement_list statement .)
    NUMBER          reduce using rule 22 (statement_list -> statement_list statement .)


state 42

    (29) statement -> expression_stmt .
